# omnivla_nav_gazebo

./: .gitignore  Dockerfile  LICENSE  README.md  dockerignore  environment.yml  run_omnivla_container.sh
datasets/export_goal_classifier/: label_map.json  split_summary.json  test.jsonl  train.jsonl  val.jsonl
datasets/run_001/episode_0001/: metadata.json
datasets/run_001/episode_0002/: metadata.json
datasets/run_001/episode_0003/: metadata.json
datasets/run_001/episode_0004/: metadata.json
datasets/run_001/episode_0005/: metadata.json
datasets/run_001/episode_0006/: metadata.json
datasets/run_001/episode_0007/: metadata.json
datasets/run_001/episode_0008/: metadata.json
datasets/run_001/episode_0009/: metadata.json
datasets/run_001/episode_0010/: metadata.json
datasets/run_001/episode_0011/: metadata.json
media/plots/: training_history.csv
omnivla_finetune/: debug_train_classifier.py  export_goal_classifier_jsonl.py  goal_classifier_dataset.py  model_omnivla_edge.py  omnivla_edge_classifier_model.py  train_omnivla_edge_classifier.py
src/bcr_bot/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/omnivla_bringup/: README.md  package.xml  setup.cfg  setup.py
src/omnivla_core/: README.md  package.xml  setup.cfg  setup.py
src/omnivla_data/: README.md  package.xml  setup.cfg  setup.py
src/omnivla_data/omnivla_data/: data_logger_node.py  episode_manager_node.py  export_utils.py  goal_sampler.py  prompt_sampler.py  prompt_templates.yaml  sample_goal_node.py  sync_utils.py
src/omnivla_eval/: README.md  package.xml  setup.cfg  setup.py
(+2436 files in other folders)
